--- a/views/supervisorDashboard.ejs
+++ b/views/supervisorDashboard.ejs
@@ -104,7 +104,7 @@
           <div class="text-4xl">⚙️</div>
           <div class="flex flex-col">
             <span class="text-3xl font-bold">Settings</span>
-            <span class="text-sm">View Information</span>
+            <span class="text-sm">Profile Info</span>
           </div>
         </a>
       </div>
